package grpc

import (
	"context"
	"fmt"
	"sync"
	"sync/atomic"
	"time"

	"github.com/yairfalse/tapio/pkg/domain"
	"github.com/yairfalse/tapio/pkg/intelligence/pipeline"
	pb "github.com/yairfalse/tapio/proto/gen/tapio/v1"
	"go.opentelemetry.io/otel/attribute"
	"go.opentelemetry.io/otel/trace"
	"go.uber.org/zap"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/durationpb"
	"google.golang.org/protobuf/types/known/timestamppb"
)

// CorrelationEngine defines the interface for correlation analysis
type CorrelationEngine interface {
	// GetSemanticGroups retrieves semantic groups based on filter
	GetSemanticGroups(ctx context.Context, filter *pb.Filter) ([]*pb.SemanticGroup, error)

	// AnalyzeEvents performs correlation analysis on events
	AnalyzeEvents(ctx context.Context, events []*domain.UnifiedEvent) ([]*pb.Correlation, error)

	// Start initializes the correlation engine
	Start() error

	// Stop gracefully shuts down the correlation engine
	Stop() error
}

// CorrelationServiceImpl implements the CorrelationService
type CorrelationServiceImpl struct {
	pb.UnimplementedCorrelationServiceServer

	// Dependencies
	logger               *zap.Logger
	tracer               trace.Tracer
	correlationEngine    CorrelationEngine
	pipelineIntegration  *pipeline.PipelineIntegration
	realtimeEventPipeline *pipeline.RealtimeEventPipeline

	// Configuration
	config CorrelationServiceConfig

	// Subscriptions for real-time updates
	subscriptions   map[string]*correlationSubscription
	subscriptionsMu sync.RWMutex
	nextSubID       atomic.Uint64

	// Metrics
	correlationsQueried   atomic.Uint64
	subscriptionsActive   atomic.Int32
	eventsAnalyzed        atomic.Uint64
	recommendationsServed atomic.Uint64

	// Service lifecycle
	startTime time.Time
	shutdown  chan struct{}
	wg        sync.WaitGroup
}

// CorrelationServiceConfig holds configuration for the correlation service
type CorrelationServiceConfig struct {
	MaxSubscriptions      int
	MaxEventsPerAnalysis  int
	DefaultConfidence     float64
	MaxConcurrentAnalysis int
	SubscriptionTimeout   time.Duration
}

// correlationSubscription represents an active correlation subscription
type correlationSubscription struct {
	id       string
	filter   *pb.Filter
	request  *pb.SubscribeToCorrelationsRequest
	stream   pb.CorrelationService_SubscribeToCorrelationsServer
	ctx      context.Context
	cancel   context.CancelFunc
	created  time.Time
	lastSent time.Time
}

// NewCorrelationServiceImpl creates a new correlation service implementation
func NewCorrelationServiceImpl(
	logger *zap.Logger,
	tracer trace.Tracer,
	correlationEngine CorrelationEngine,
	pipelineIntegration *pipeline.PipelineIntegration,
	realtimeEventPipeline *pipeline.RealtimeEventPipeline,
) *CorrelationServiceImpl {
	config := CorrelationServiceConfig{
		MaxSubscriptions:      1000,
		MaxEventsPerAnalysis:  10000,
		DefaultConfidence:     0.7,
		MaxConcurrentAnalysis: 10,
		SubscriptionTimeout:   5 * time.Minute,
	}

	return &CorrelationServiceImpl{
		logger:                logger,
		tracer:                tracer,
		correlationEngine:     correlationEngine,
		pipelineIntegration:   pipelineIntegration,
		realtimeEventPipeline: realtimeEventPipeline,
		config:                config,
		subscriptions:         make(map[string]*correlationSubscription),
		startTime:             time.Now(),
		shutdown:              make(chan struct{}),
	}
}

// GetCorrelations retrieves correlations based on query
func (cs *CorrelationServiceImpl) GetCorrelations(ctx context.Context, req *pb.GetCorrelationsRequest) (*pb.GetCorrelationsResponse, error) {
	ctx, span := cs.tracer.Start(ctx, "correlation.get_correlations")
	defer span.End()

	cs.correlationsQueried.Add(1)

	cs.logger.Debug("Getting correlations",
		zap.Int("correlation_ids", len(req.CorrelationIds)),
		zap.Bool("has_query", req.Query != nil))

	// Get correlations from the correlation engine
	var correlations []*pb.Correlation
	var err error

	if len(req.CorrelationIds) > 0 {
		// Get specific correlations by ID
		correlations, err = cs.getCorrelationsByIDs(ctx, req.CorrelationIds)
	} else if req.Query != nil {
		// Query correlations with filters
		correlations, err = cs.queryCorrelations(ctx, req.Query)
	} else {
		// Get all recent correlations
		correlations, err = cs.getRecentCorrelations(ctx)
	}

	if err != nil {
		span.RecordError(err)
		return nil, status.Errorf(codes.Internal, "failed to get correlations: %v", err)
	}

	span.SetAttributes(
		attribute.Int("correlations.count", len(correlations)),
		attribute.Int("correlations.requested", len(req.CorrelationIds)),
	)

	return &pb.GetCorrelationsResponse{
		Correlations:  correlations,
		TotalCount:    int64(len(correlations)),
		NextPageToken: "", // TODO: Implement pagination
		Metadata: map[string]string{
			"query_time":    time.Now().Format(time.RFC3339),
			"service_type":  "correlation",
			"result_count":  fmt.Sprintf("%d", len(correlations)),
		},
	}, nil
}

// GetSemanticGroups retrieves semantic correlation groups
func (cs *CorrelationServiceImpl) GetSemanticGroups(ctx context.Context, req *pb.GetSemanticGroupsRequest) (*pb.GetSemanticGroupsResponse, error) {
	ctx, span := cs.tracer.Start(ctx, "correlation.get_semantic_groups")
	defer span.End()

	cs.logger.Debug("Getting semantic groups",
		zap.Int("group_ids", len(req.GroupIds)),
		zap.Bool("has_filter", req.Filter != nil))

	// Get semantic groups from the correlation engine
	groups, err := cs.correlationEngine.GetSemanticGroups(ctx, req.Filter)
	if err != nil {
		span.RecordError(err)
		return nil, status.Errorf(codes.Internal, "failed to get semantic groups: %v", err)
	}

	span.SetAttributes(
		attribute.Int("semantic_groups.count", len(groups)),
		attribute.Bool("include_events", req.IncludeEvents),
		attribute.Bool("include_analysis", req.IncludeAnalysis),
	)

	return &pb.GetSemanticGroupsResponse{
		Groups:        groups,
		TotalCount:    int64(len(groups)),
		NextPageToken: "", // TODO: Implement pagination
	}, nil
}

// AnalyzeEvents performs on-demand correlation analysis
func (cs *CorrelationServiceImpl) AnalyzeEvents(ctx context.Context, req *pb.AnalyzeEventsRequest) (*pb.AnalyzeEventsResponse, error) {
	ctx, span := cs.tracer.Start(ctx, "correlation.analyze_events")
	defer span.End()

	cs.eventsAnalyzed.Add(uint64(len(req.EventIds)))

	cs.logger.Info("Analyzing events",
		zap.Int("event_ids", len(req.EventIds)),
		zap.Bool("enable_root_cause", req.EnableRootCause),
		zap.Bool("enable_predictions", req.EnablePredictions))

	// Validate request
	if len(req.EventIds) > cs.config.MaxEventsPerAnalysis {
		return nil, status.Errorf(codes.InvalidArgument, 
			"too many events requested: %d (max: %d)", 
			len(req.EventIds), cs.config.MaxEventsPerAnalysis)
	}

	analysisStart := time.Now()

	// Get events for analysis
	events, err := cs.getEventsForAnalysis(ctx, req)
	if err != nil {
		span.RecordError(err)
		return nil, status.Errorf(codes.Internal, "failed to get events for analysis: %v", err)
	}

	// Perform correlation analysis
	correlations, err := cs.correlationEngine.AnalyzeEvents(ctx, events)
	if err != nil {
		span.RecordError(err)
		return nil, status.Errorf(codes.Internal, "correlation analysis failed: %v", err)
	}

	// Get semantic groups if requested
	var semanticGroups []*pb.SemanticGroup
	if len(correlations) > 0 {
		semanticGroups, _ = cs.correlationEngine.GetSemanticGroups(ctx, req.GetEventQuery().GetFilter())
	}

	analysisEnd := time.Now()

	span.SetAttributes(
		attribute.Int("events.analyzed", len(events)),
		attribute.Int("correlations.found", len(correlations)),
		attribute.Int("semantic_groups.found", len(semanticGroups)),
		attribute.String("analysis.duration", analysisEnd.Sub(analysisStart).String()),
	)

	response := &pb.AnalyzeEventsResponse{
		Correlations:     correlations,
		SemanticGroups:   semanticGroups,
		AnalysisDuration: durationpb.New(analysisEnd.Sub(analysisStart)),
		EventsAnalyzed:   int32(len(events)),
		Metadata: map[string]string{
			"analysis_time":   analysisEnd.Format(time.RFC3339),
			"events_count":    fmt.Sprintf("%d", len(events)),
			"correlations_count": fmt.Sprintf("%d", len(correlations)),
		},
	}

	// Add root cause analysis if requested
	if req.EnableRootCause && len(correlations) > 0 {
		response.RootCause = cs.generateRootCauseAnalysis(correlations)
	}

	// Add predictions if requested
	if req.EnablePredictions && len(correlations) > 0 {
		response.Predictions = cs.generatePredictions(correlations)
	}

	// Add impact assessment if requested
	if req.EnableImpactAssessment && len(correlations) > 0 {
		response.OverallImpact = cs.generateImpactAssessment(correlations)
	}

	return response, nil
}

// SubscribeToCorrelations provides real-time correlation updates
func (cs *CorrelationServiceImpl) SubscribeToCorrelations(req *pb.SubscribeToCorrelationsRequest, stream pb.CorrelationService_SubscribeToCorrelationsServer) error {
	ctx := stream.Context()
	ctx, span := cs.tracer.Start(ctx, "correlation.subscribe")
	defer span.End()

	// Check subscription limits
	activeCount := cs.subscriptionsActive.Load()
	if int(activeCount) >= cs.config.MaxSubscriptions {
		return status.Errorf(codes.ResourceExhausted, 
			"too many active subscriptions: %d (max: %d)", 
			activeCount, cs.config.MaxSubscriptions)
	}

	// Create subscription
	subID := fmt.Sprintf("corr-sub-%d", cs.nextSubID.Add(1))
	subCtx, cancel := context.WithCancel(ctx)

	sub := &correlationSubscription{
		id:       subID,
		filter:   req.Filter,
		request:  req,
		stream:   stream,
		ctx:      subCtx,
		cancel:   cancel,
		created:  time.Now(),
		lastSent: time.Now(),
	}

	// Register subscription
	cs.subscriptionsMu.Lock()
	cs.subscriptions[subID] = sub
	cs.subscriptionsMu.Unlock()
	cs.subscriptionsActive.Add(1)

	// Clean up on exit
	defer func() {
		cs.subscriptionsMu.Lock()
		delete(cs.subscriptions, subID)
		cs.subscriptionsMu.Unlock()
		cs.subscriptionsActive.Add(-1)
		cancel()
	}()

	cs.logger.Info("Correlation subscription created",
		zap.String("subscription_id", subID),
		zap.Float64("min_confidence", req.MinConfidence))

	span.SetAttributes(
		attribute.String("subscription.id", subID),
		attribute.Float64("subscription.min_confidence", req.MinConfidence),
		attribute.Int("subscription.correlation_types", len(req.CorrelationTypes)),
	)

	// Start correlation monitoring
	return cs.monitorCorrelations(sub)
}

// GetRecommendedActions returns recommended actions for correlations
func (cs *CorrelationServiceImpl) GetRecommendedActions(ctx context.Context, req *pb.GetCorrelationsRequest) (*pb.GetRecommendedActionsResponse, error) {
	ctx, span := cs.tracer.Start(ctx, "correlation.get_recommended_actions")
	defer span.End()

	cs.recommendationsServed.Add(1)

	// Get correlations first
	correlationsResp, err := cs.GetCorrelations(ctx, req)
	if err != nil {
		return nil, err
	}

	var allActions []*pb.RecommendedAction
	var correlationID string

	// Generate recommendations for each correlation
	for _, correlation := range correlationsResp.Correlations {
		correlationID = correlation.Id // Use last correlation ID for response
		actions := cs.generateRecommendedActions(correlation)
		allActions = append(allActions, actions...)
	}

	span.SetAttributes(
		attribute.Int("correlations.analyzed", len(correlationsResp.Correlations)),
		attribute.Int("actions.generated", len(allActions)),
	)

	return &pb.GetRecommendedActionsResponse{
		Actions:       allActions,
		CorrelationId: correlationID,
		Metadata: map[string]string{
			"generated_at":     time.Now().Format(time.RFC3339),
			"correlations_count": fmt.Sprintf("%d", len(correlationsResp.Correlations)),
			"actions_count":    fmt.Sprintf("%d", len(allActions)),
		},
	}, nil
}

// Helper methods

func (cs *CorrelationServiceImpl) getCorrelationsByIDs(ctx context.Context, ids []string) ([]*pb.Correlation, error) {
	// TODO: Implement with actual correlation engine
	correlations := make([]*pb.Correlation, 0, len(ids))
	
	for _, id := range ids {
		// Mock correlation for now
		correlation := &pb.Correlation{
			Id:               id,
			Type:             pb.CorrelationType_CORRELATION_TYPE_SEMANTIC,
			Title:            fmt.Sprintf("Correlation %s", id),
			Description:      "Mock correlation from correlation service",
			CorrelationScore: 0.85,
			Confidence:       0.9,
			EventIds:         []string{"event-1", "event-2"},
			EventCount:       2,
			DiscoveredAt:     timestamppb.Now(),
			Statistics:       map[string]float64{"strength": 0.85},
			Metadata:         map[string]string{"source": "correlation_service"},
		}
		correlations = append(correlations, correlation)
	}
	
	return correlations, nil
}

func (cs *CorrelationServiceImpl) queryCorrelations(ctx context.Context, query *pb.CorrelationQuery) ([]*pb.Correlation, error) {
	// TODO: Implement with actual correlation engine query
	// For now, return mock correlations based on filters
	minConfidence := query.MinConfidence
	if minConfidence == 0 {
		minConfidence = cs.config.DefaultConfidence
	}

	correlations := []*pb.Correlation{
		{
			Id:               "query-corr-1",
			Type:             pb.CorrelationType_CORRELATION_TYPE_SEMANTIC,
			Title:            "High Memory Usage Pattern",
			Description:      "Memory usage spikes correlate with deployment events",
			CorrelationScore: 0.92,
			Confidence:       0.88,
			EventIds:         []string{"mem-1", "deploy-1"},
			EventCount:       2,
			DiscoveredAt:     timestamppb.Now(),
			Statistics:       map[string]float64{"strength": 0.92},
			Metadata:         map[string]string{"pattern": "deployment_memory_spike"},
		},
	}

	// Filter by confidence
	filtered := make([]*pb.Correlation, 0)
	for _, corr := range correlations {
		if corr.Confidence >= minConfidence {
			filtered = append(filtered, corr)
		}
	}

	return filtered, nil
}

func (cs *CorrelationServiceImpl) getRecentCorrelations(ctx context.Context) ([]*pb.Correlation, error) {
	// TODO: Get recent correlations from correlation engine
	return cs.queryCorrelations(ctx, &pb.CorrelationQuery{
		MinConfidence: cs.config.DefaultConfidence,
	})
}

func (cs *CorrelationServiceImpl) getEventsForAnalysis(ctx context.Context, req *pb.AnalyzeEventsRequest) ([]*domain.UnifiedEvent, error) {
	// TODO: Implement event retrieval from event store
	// For now, create mock events
	events := make([]*domain.UnifiedEvent, 0, len(req.EventIds))
	
	for _, eventID := range req.EventIds {
		event := &domain.UnifiedEvent{
			ID:        eventID,
			Type:      domain.EventTypeSystem,
			Source:    "correlation-analysis",
			Timestamp: time.Now(),
			Message:   fmt.Sprintf("Mock event for analysis: %s", eventID),
		}
		events = append(events, event)
	}
	
	return events, nil
}

func (cs *CorrelationServiceImpl) monitorCorrelations(sub *correlationSubscription) error {
	ticker := time.NewTicker(1 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case <-sub.ctx.Done():
			return nil
		case <-ticker.C:
			// Check for new correlations that match the subscription
			update := cs.checkForCorrelationUpdates(sub)
			if update != nil {
				if err := sub.stream.Send(update); err != nil {
					cs.logger.Error("Failed to send correlation update",
						zap.String("subscription_id", sub.id),
						zap.Error(err))
					return err
				}
				sub.lastSent = time.Now()
			}
		}
	}
}

func (cs *CorrelationServiceImpl) checkForCorrelationUpdates(sub *correlationSubscription) *pb.CorrelationUpdate {
	// TODO: Implement real correlation monitoring
	// For now, send periodic mock updates
	if time.Since(sub.lastSent) > 10*time.Second {
		return &pb.CorrelationUpdate{
			Type: pb.CorrelationUpdate_UPDATE_TYPE_NEW_CORRELATION,
			Correlation: &pb.Correlation{
				Id:               fmt.Sprintf("update-%d", time.Now().Unix()),
				Type:             pb.CorrelationType_CORRELATION_TYPE_TEMPORAL,
				Title:            "New Correlation Detected",
				Description:      "Real-time correlation update",
				CorrelationScore: 0.8,
				Confidence:       0.85,
				EventIds:         []string{"evt-1", "evt-2"},
				EventCount:       2,
				DiscoveredAt:     timestamppb.Now(),
			},
			UpdateTimestamp: timestamppb.Now(),
			UpdateMetadata: map[string]string{
				"subscription_id": sub.id,
				"update_type":     "real_time",
			},
		}
	}
	return nil
}

func (cs *CorrelationServiceImpl) generateRootCauseAnalysis(correlations []*pb.Correlation) *pb.RootCauseAnalysis {
	// TODO: Implement AI-powered root cause analysis
	return &pb.RootCauseAnalysis{
		RootCauseSummary: "Memory exhaustion in payment service due to connection pool leak",
		Confidence:       0.85,
		CausalFactors: []*pb.CausalFactor{
			{
				Id:                 "factor-1",
				Description:        "Database connection pool not properly closed",
				ContributionWeight: 0.8,
				Category:           "configuration",
			},
		},
	}
}

func (cs *CorrelationServiceImpl) generatePredictions(correlations []*pb.Correlation) []*pb.PredictedOutcome {
	// TODO: Implement ML-based predictions
	return []*pb.PredictedOutcome{
		{
			Scenario:            "Service cascade failure",
			Probability:         0.75,
			TimeToOutcome:       durationpb.New(5 * time.Minute),
			Confidence:          0.8,
			ModelVersion:        "v1.0",
			PredictionTimestamp: timestamppb.Now(),
		},
	}
}

func (cs *CorrelationServiceImpl) generateImpactAssessment(correlations []*pb.Correlation) *pb.ImpactAssessment {
	// TODO: Implement business impact assessment
	return &pb.ImpactAssessment{
		Level:                  pb.ImpactAssessment_IMPACT_LEVEL_HIGH,
		BusinessImpactScore:    0.8,
		TechnicalImpactScore:   0.9,
		AffectedServices:       []string{"payment-service", "user-service"},
		AffectedUsers:          1500,
		AffectedRequests:       50000,
		EstimatedCost:          25000.0,
		Currency:               "USD",
		CascadeProbability:     0.6,
		PotentialCascadeTargets: []string{"order-service", "inventory-service"},
	}
}

func (cs *CorrelationServiceImpl) generateRecommendedActions(correlation *pb.Correlation) []*pb.RecommendedAction {
	// TODO: Generate intelligent recommendations based on correlation type and context
	return []*pb.RecommendedAction{
		{
			Id:          "action-1",
			Title:       "Scale Payment Service",
			Description: "Increase payment service replicas to handle load",
			Type:        pb.RecommendedAction_ACTION_TYPE_MITIGATE,
			Priority:    pb.RecommendedAction_PRIORITY_HIGH,
			Commands:    []string{"kubectl scale deployment payment-service --replicas=5"},
			Parameters: map[string]string{
				"service":  "payment-service",
				"replicas": "5",
			},
			ExpectedResult:   "Reduced response time and error rate",
			EstimatedDuration: durationpb.New(2 * time.Minute),
			RiskLevel:        "low",
			RiskDescription:  "Minimal risk - standard scaling operation",
		},
		{
			Id:          "action-2",
			Title:       "Investigate Memory Leak",
			Description: "Deep dive into memory usage patterns",
			Type:        pb.RecommendedAction_ACTION_TYPE_INVESTIGATE,
			Priority:    pb.RecommendedAction_PRIORITY_MEDIUM,
			Commands:    []string{"kubectl exec -it payment-service -- heap-dump"},
			ExpectedResult:   "Identify source of memory leak",
			EstimatedDuration: durationpb.New(15 * time.Minute),
			RiskLevel:        "medium",
			RiskDescription:  "May temporarily impact service performance",
		},
	}
}

// GetStatistics returns service statistics
func (cs *CorrelationServiceImpl) GetStatistics() map[string]interface{} {
	return map[string]interface{}{
		"correlations_queried":    cs.correlationsQueried.Load(),
		"subscriptions_active":    cs.subscriptionsActive.Load(),
		"events_analyzed":         cs.eventsAnalyzed.Load(),
		"recommendations_served":  cs.recommendationsServed.Load(),
		"uptime":                  time.Since(cs.startTime).String(),
		"service_type":            "correlation",
	}
}